Logo Name Changed For all htmls

--- a/about.html
+++ b/about.html
@@ -26,11 +26,7 @@
         <header class="navbar">
             <div class="logo-container">
                 <!-- 🔥 Add your logo image here -->
-                <img
-                    src="image/ai-generated-illustration-lion-head-logo-design-vibrant-colors-ai-generated-illustration-lion-head-logo-design-320657705-removebg-preview.png"
-                    alt="Logo"
-                    class="logo-img"
-                />
+                <img src="image/logo.png" alt="Logo" class="logo-img" />
                 <div class="logo">Code<span>N</span>Canvas</div>
             </div>
             <nav>
