--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,7 @@
     <body class="dark-mode">
         <header class="navbar">
             <div class="logo-container">
-                <img
-                    src="image/ai-generated-illustration-lion-head-logo.png"
-                    alt="Logo"
-                    class="logo-img"
-                />
+                <img src="image/logo.png" alt="Logo" class="logo-img" />
                 <div class="logo">Code<span>N</span>Canvas</div>
             </div>
             <nav>
