New Responsive menu added

--- a/about.html
+++ b/about.html
@@ -25,17 +25,16 @@
     <body class="dark-mode">
         <header class="navbar">
             <div class="logo-container">
-                <!-- 🔥 Add your logo image here -->
                 <img src="image/logo.png" alt="Logo" class="logo-img" />
                 <div class="logo">Code<span>N</span>Canvas</div>
+                <button class="hamburger" id="hamburger">&#9776;</button>
             </div>
-            <nav>
+            <nav id="nav-menu" class="nav-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
-
                     <li><button id="modeToggle">🌓</button></li>
                 </ul>
             </nav>
