--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,14 @@
             <div class="logo-container">
                 <img src="image/logo.png" alt="Logo" class="logo-img" />
                 <div class="logo">Code<span>N</span>Canvas</div>
+                <button class="hamburger" id="hamburger">&#9776;</button>
             </div>
-            <nav>
+            <nav id="nav-menu" class="nav-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
-
                     <li><button id="modeToggle">🌓</button></li>
                 </ul>
             </nav>
