--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </style>
     </head>
     <body class="dark-mode">
-        <header class="navbar">
+        <!-- <header class="navbar">
             <div class="logo-container">
                 <img src="image/logo.png" alt="Logo" class="logo-img" />
                 <div class="logo">Code<span>N</span>Canvas</div>
@@ -35,6 +35,23 @@
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
 
+                    <li><button id="modeToggle">🌓</button></li>
+                </ul>
+            </nav>
+        </header> -->
+
+        <header class="navbar">
+            <div class="logo-container">
+                <img src="image/logo.png" alt="Logo" class="logo-img" />
+                <div class="logo">Code<span>N</span>Canvas</div>
+                <button class="hamburger" id="hamburger">&#9776;</button>
+            </div>
+            <nav id="nav-menu" class="nav-menu">
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><button id="modeToggle">🌓</button></li>
                 </ul>
             </nav>
