set the contact email or number box

--- a/contact.html
+++ b/contact.html
@@ -70,9 +70,9 @@
                 <div class="contact-info slide-in-left">
                     <h2>📧 Email</h2>
                     <p>
-                        <a class="mail" href="mailto:durrani0305@gmail.com"
-                            >durrani0305@gmail.com</a
-                        >
+                        <a class="mail" href="mailto:durrani0305@gmail.com">
+                            durrani0305@gmail.com
+                        </a>
                     </p>
 
                     <h2>📞 WhatsApp</h2>
@@ -81,8 +81,9 @@
                             class="phone"
                             href="https://wa.me/923164507678"
                             target="_blank"
-                            >+92 316 4507678</a
                         >
+                            +92 316 4507678
+                        </a>
                     </p>
                 </div>
             </div>
